--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -11,6 +11,12 @@
     />
     <!-- Custom StyleSheet -->
     <link rel="stylesheet" href="{%static 'css/styles.css' %}" />
+    
+    {%block link_block%}
+
+    {%endblock%}
+
+
     <title>Boy’s T-Shirt</title>
   </head>
 
@@ -122,8 +128,10 @@
     <!-- Custom Script -->
     <script src="{%static 'js/index.js' %}"></script>
   </body>
+
+  {%block script_block%}
+
+  {%endblock%}
+
 </html>
 
-{%block script_block%}
-
-{%endblock%}
