--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -63,9 +63,9 @@
               <i class="bx bx-heart"></i>
               <span class="d-flex">0</span>
             </div>
-            <a href="cart.html" class="icon">
+            <a href="{% url 'basket-items' %}" class="icon">
               <i class="bx bx-cart"></i>
-              <span class="d-flex">0</span>
+              <span class="d-flex">{{cart_count}}</span>
             </a>
           </li>
         </ul>
@@ -81,9 +81,9 @@
             <i class="bx bx-heart"></i>
             <span class="d-flex">0</span>
           </div>
-          <a href="cart.html" class="icon">
+          <a href="{% url 'basket-items' %}" class="icon">
             <i class="bx bx-cart"></i>
-            <span class="d-flex">0</span>
+            <span class="d-flex">{{cart_count}}</span>
           </a>
         </div>
 
