--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -60,8 +60,7 @@
               <i class="bx bx-search"></i>
             </div>
             <div class="icon">
-              <i class="bx bx-heart"></i>
-              <span class="d-flex">0</span>
+              <a href="{%url 'signout'%}">Logout</a>
             </div>
             <a href="{% url 'basket-items' %}" class="icon">
               <i class="bx bx-cart"></i>
@@ -78,8 +77,7 @@
             <i class="bx bx-search"></i>
           </div>
           <div class="icon">
-            <i class="bx bx-heart"></i>
-            <span class="d-flex">0</span>
+            <a href="{%url 'signout'%}">Logout</a>
           </div>
           <a href="{% url 'basket-items' %}" class="icon">
             <i class="bx bx-cart"></i>
