--- a/store/templates/checkout.html
+++ b/store/templates/checkout.html
@@ -217,8 +217,8 @@
                     </label>
 
                     <select name="payment" id="" class="flex h-10 w-full rounded-md border border-black/30 bg-transparent px-3 py-2 text-sm placeholder:text-gray-600 focus:outline-none focus:ring-1 focus:ring-black/30 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50">
-                      <option value={{cod}}>cod</option>
-                      <option value={{online}}>online</option>
+                      <option value="cod">cod</option>
+                      <option value="online">online</option>
                     </select>
                    
                   </div>
